--- a/web-service/scripts/requirements.txt
+++ b/web-service/scripts/requirements.txt
@@ -5,5 +5,6 @@ flask-bootstrap==3.3.7.1
 flask-wtf==0.14.2
 Flask-HTTPAuth==3.2.4
 pyeda==0.28.0
-pymongo==3.4.0
+pymongo==3.10.1
 selenium==3.141.0
+pydash==4.7.6
