--- a/web-service/front/package.json
+++ b/web-service/front/package.json
@@ -74,6 +74,7 @@
     "react-dom": "^16.12.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "socket.io-client": "^2.3.0",
     "sprintf-js": "^1.1.2",
     "svg-url-loader": "^3.0.2",
     "text-mask-addons": "^3.8.0",
