--- a/web-service/front/package.json
+++ b/web-service/front/package.json
@@ -54,6 +54,7 @@
     "webpack-dev-server": "3.9.0"
   },
   "dependencies": {
+    "antd": "^4.2.4",
     "axios": "^0.19.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
