Config deploy files

--- a/web-service/src/config/server-test.com.conf
+++ b/web-service/src/config/server-test.com.conf
@@ -2,7 +2,6 @@
     ServerName front-test.com
     ServerAlias www.front-test.com
 
-
     DocumentRoot /var/www/front-test.com/public/
 
     ProxyPass /api http://server-test.com/
@@ -22,6 +21,13 @@
     DocumentRoot /var/www/server-test.com/
 
     <Directory />
+#        Header set Access-Control-Allow-Origin "http://0.0.0.0:8080"
+        Header set Access-Control-Allow-Origin "http://front-test.com"
+        Header set Access-Control-Allow-Credentials: true
+        Header set Access-Control-Allow-Methods "POST, GET, DELETE, PUT"
+        Header set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
+
+
         Options FollowSymLinks
         AllowOverride None
     </Directory>
