--- a/web-service/src/config/server-test.com.conf
+++ b/web-service/src/config/server-test.com.conf
@@ -4,15 +4,17 @@
 
     DocumentRoot /var/www/front-test.com/public/
 
-    ProxyPass /api http://server-test.com/
-    ProxyPassReverse /api http://server-test.com/
+#     ProxyPass /api http://server-test.com/
+#     ProxyPassReverse /api http://server-test.com/
+    ProxyPass /api http://localhost:3281
+    ProxyPassReverse /api http://localhost:3281
 
     ErrorLog /var/www/front-test.com/apache_error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
 
 
-<VirtualHost *:80>
+<VirtualHost *:81>
     ServerName server-test.com
 
     WSGIDaemonProcess server-test.com user=www-data group=www-data threads=5 python-path=/var/www/server-test.com
