Update deploy files

--- a/web-service/src/config/server-test.com.conf
+++ b/web-service/src/config/server-test.com.conf
@@ -1,21 +1,24 @@
-<VirtualHost *:80>
+Listen 81
+Listen 82
+Listen 83
+
+<VirtualHost *:81>
     ServerName front-test.com
     ServerAlias www.front-test.com
 
     DocumentRoot /var/www/front-test.com/public/
 
-#     ProxyPass /api http://server-test.com/
-#     ProxyPassReverse /api http://server-test.com/
-    ProxyPass /api http://localhost:3281
-    ProxyPassReverse /api http://localhost:3281
+     ProxyPass /api http://172.17.0.2:82
+     ProxyPassReverse /api http://172.17.0.2:82
 
     ErrorLog /var/www/front-test.com/apache_error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
 
 
-<VirtualHost *:81>
+<VirtualHost *:82>
     ServerName server-test.com
+    ServerAlias server-test.com
 
     WSGIDaemonProcess server-test.com user=www-data group=www-data threads=5 python-path=/var/www/server-test.com
     WSGIScriptAlias / /var/www/server-test.com/server-test.com.wsgi
@@ -56,3 +59,11 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
 
+<VirtualHost *:83>
+    DocumentRoot /var/www/server-test.com/
+
+    <Directory />
+        Order deny,allow
+        Allow from all
+    </Directory>
+</VirtualHost>
